CustomObjects/objects/blng__RefundLineCreditNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLine__c</fullName>
        <label>Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
        <relationshipName>RefundLinesCreditNoteLine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Refund__c</fullName>
        <label>Refund</label>
        <referenceTo>blng__Refund__c</referenceTo>
        <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
        <relationshipName>RefundLinesCreditNoteLine</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Refund Line (Credit Note Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Refund Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Lines (Credit Note Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>